chore(ci): enforce scalafmt check; add sbt-revolver plugin and remove unused deps
- Add sbt-scalafmt plugin and check step in CI
- Restore sbt-revolver plugin for build
- Remove unused libs (sttp/pdfbox/tika/poi/jsoup)
- Downgrade noisy logs to debug in GameEngine and WS server

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
           key: ${{ runner.os }}-ivy2-${{ hashFiles('**/build.sbt') }}
       - name: Run tests
         run: sbt test
+      - name: Check formatting
+        run: sbt scalafmtCheckAll
 
   frontend:
     runs-on: ubuntu-latest
@@ -46,4 +48,3 @@ jobs:
         run: npm run lint --if-present
       - name: Build
         run: npm run build --if-present
-
