--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,8 +3,9 @@ version = 3.7.17
 maxColumn = 120
 align.preset = none
 rewrite.rules = [RedundantBraces, RedundantParens]
-danglingParentheses = false
+danglingParentheses.preset = false
 assumeStandardLibraryStripMargin = true
+runner.dialect = scala213
 
 continuationIndent.defnSite = 2
 continuationIndent.callSite = 2
