docs: add comprehensive documentation and reorganize package structure
- Reorganize source code into logical package hierarchy:
  * api/ - HTTP server and session management
  * game/ - Core game engine and logic
  * media/ - Image, music, TTS, STT generation
  * persistence/ - Game state and step-based persistence
  * streaming/ - Streaming response handling
  * tools/ - Debug and utility scripts
  * websocket/ - Real-time communication layer

- Add comprehensive scaladoc to backend:
  * GameEngine: Document class, methods, and state management
  * SzorkServer: Document case classes and server configuration
  * TypedWebSocketServer: Document WebSocket message handling

- Add JSDoc to frontend TypeScript:
  * WebSocketClient: Complete documentation for all public methods
  * Document connection lifecycle and message routing

- Clean up compiler warnings:
  * Remove unused imports from DefaultClients, SideEffects
  * Remove unused envLoader parameters
  * Reduce warnings from 21 to 18

- Reorganize documentation:
  * Move development docs to docs/ directory
  * Archive historical implementation plans
  * Organize design documents separately

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,11 @@ project/project/
 .env
 *.env.local
 
-# Logs
+# Logs and debug files
 *.log
+debug-*.txt
+backend.log
+frontend.log
 
 # OS
 .DS_Store
@@ -32,6 +35,7 @@ frontend/.vite/
 # Cache and saves
 szork-cache/
 szork-saves/
+runs/
 
 # Temporary files
 *.tmp
