chore: enforce warnings as errors in CI and pre-commit
- Add compile step with -Xfatal-warnings to CI
- Update pre-commit hook to fail on compiler warnings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
             ~/.ivy2/cache
             ~/.cache/coursier
           key: ${{ runner.os }}-ivy2-${{ hashFiles('**/build.sbt') }}
+      - name: Compile with fatal warnings
+        run: sbt 'set ThisBuild / scalacOptions += "-Xfatal-warnings"' compile
       - name: Run tests
         run: sbt test
       - name: Check formatting
